--- a/dev-vcs/rabbitvcs/ChangeLog
+++ b/dev-vcs/rabbitvcs/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-vcs/rabbitvcs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/rabbitvcs/ChangeLog,v 1.10 2012/09/18 15:45:15 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/rabbitvcs/ChangeLog,v 1.11 2012/10/06 10:37:31 xmw Exp $
+
+*rabbitvcs-0.15.2 (06 Oct 2012)
+
+  06 Oct 2012; Michael Weber <xmw@gentoo.org> +rabbitvcs-0.15.2.ebuild:
+  Version bump (thanks Rion).
 
 *rabbitvcs-0.15.1 (18 Sep 2012)
 
