--- a/sys-apps/dbus/ChangeLog
+++ b/sys-apps/dbus/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/dbus
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.358 2012/10/04 19:30:01 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.359 2012/10/06 10:49:42 maekke Exp $
+
+  06 Oct 2012; Markus Meier <maekke@gentoo.org> dbus-1.6.8.ebuild:
+  arm stable, bug #436028
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> dbus-1.6.8.ebuild:
   Stable for amd64, wrt bug #436028
