--- a/sci-geosciences/gpxviewer/ChangeLog
+++ b/sci-geosciences/gpxviewer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-geosciences/gpxviewer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/gpxviewer/ChangeLog,v 1.11 2012/10/06 11:22:34 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/gpxviewer/ChangeLog,v 1.12 2012/10/06 11:23:08 jlec Exp $
+
+  06 Oct 2012; Justin Lecher <jlec@gentoo.org> -files/0.2.0-configure.ac.patch:
+  Drop old patch
 
 *gpxviewer-0.3.0 (06 Oct 2012)
 
