--- a/sci-chemistry/pymol/ChangeLog
+++ b/sci-chemistry/pymol/ChangeLog
@@ -1,6 +1,18 @@
 # ChangeLog for sci-chemistry/pymol
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/pymol/ChangeLog,v 1.94 2012/09/23 07:50:50 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/pymol/ChangeLog,v 1.95 2012/10/06 12:02:10 jlec Exp $
+
+  06 Oct 2012; Justin Lecher <jlec@gentoo.org>
+  -files/pymol-0.99_rc10-data-path.patch, -files/pymol-1.2.2-data-path.patch,
+  -files/pymol-1.2.2-prefix.patch, -files/pymol-1.2.2-shaders.patch,
+  -files/pymol-1.2.2-vmd.patch, -files/pymol-1.3.0-vmd.patch,
+  -pymol-1.3.1_pre3925-r1.ebuild, -pymol-1.4.1.ebuild,
+  -files/pymol-1.4.1-data-path.patch, -files/pymol-1.4.1-shaders.patch,
+  -files/pymol-1.4.1-web.patch, -files/pymol-1.4-shaders.patch,
+  -files/pymol-1.4-vmd.patch, -pymol-1.5.0.1.ebuild,
+  -files/pymol-1.5.0.1-prefix.patch, -pymol-1.5.0.2.ebuild,
+  -pymol-1.5.0.3.ebuild, pymol-1.5.0.3-r1.ebuild, metadata.xml:
+  Add fix for OSX prefix and keyword ~x64-macos ~x86-macos; #437324; Drop old
 
   23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> pymol-1.5.0.3-r1.ebuild:
   x86 stable wrt bug #431120
