--- a/sys-apps/gawk/ChangeLog
+++ b/sys-apps/gawk/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/gawk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/ChangeLog,v 1.156 2012/10/03 18:03:45 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/ChangeLog,v 1.157 2012/10/06 12:26:54 ottxor Exp $
+
+*gawk-4.0.1-r1 (06 Oct 2012)
+
+  06 Oct 2012; Christoph Junghans <ottxor@gentoo.org> +gawk-4.0.1-r1.ebuild:
+  virtual/awk support and move to /usr/bin (bug #426628)
 
   03 Oct 2012; Brent Baude <ranger@gentoo.org> gawk-4.0.1.ebuild:
   Marking gawk-4.0.1 ppc for bug 431954
