--- a/net-fs/netatalk/ChangeLog
+++ b/net-fs/netatalk/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-fs/netatalk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/netatalk/ChangeLog,v 1.88 2012/09/12 06:33:40 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/netatalk/ChangeLog,v 1.89 2012/10/06 12:41:07 jlec Exp $
+
+*netatalk-3.0.1 (06 Oct 2012)
+
+  06 Oct 2012; Justin Lecher <jlec@gentoo.org> netatalk-3.0.ebuild,
+  +netatalk-3.0.1.ebuild, +files/netatalk-3.0.1-gentoo.patch:
+  Version Bump, #436908
 
   12 Sep 2012; Justin Lecher <jlec@gentoo.org> netatalk-3.0.ebuild:
   Add missing DEP on dev-libs/libevent, #434758
