--- a/x11-proto/xcb-proto/ChangeLog
+++ b/x11-proto/xcb-proto/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-proto/xcb-proto
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/xcb-proto/ChangeLog,v 1.82 2012/08/26 18:21:33 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/xcb-proto/ChangeLog,v 1.83 2012/10/06 13:31:15 chithanh Exp $
+
+*xcb-proto-1.8 (06 Oct 2012)
+
+  06 Oct 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +xcb-proto-1.8.ebuild:
+  Version bump.
 
   26 Aug 2012; Raúl Porcel <armin76@gentoo.org> xcb-proto-1.7.1.ebuild:
   alpha/ia64/s390/sh/sparc stable wrt #419473
@@ -293,4 +299,3 @@
   09 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; +metadata.xml,
   +xcb-proto-0.9.92.ebuild:
   Add X C-language Bindings protocol headers.
-
