--- a/dev-lang/spidermonkey/ChangeLog
+++ b/dev-lang/spidermonkey/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/spidermonkey
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/spidermonkey/ChangeLog,v 1.80 2012/10/04 17:13:22 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/spidermonkey/ChangeLog,v 1.81 2012/10/06 13:49:14 blueness Exp $
+
+  06 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  spidermonkey-1.8.5-r1.ebuild:
+  stable ppc ppc64, bug #436670
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> spidermonkey-1.8.5-r1.ebuild:
   Stable for amd64, wrt bug #436670
