--- a/net-misc/keychain/ChangeLog
+++ b/net-misc/keychain/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/keychain
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/keychain/ChangeLog,v 1.94 2012/09/19 20:21:32 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/keychain/ChangeLog,v 1.95 2012/10/06 15:08:54 ago Exp $
+
+*keychain-2.7.1-r1 (06 Oct 2012)
+
+  06 Oct 2012; Agostino Sarubbo <ago@gentoo.org> +keychain-2.7.1-r1.ebuild,
+  keychain-2.7.1.ebuild:
+  Eapi4 - Use virtual/ssh, wrt to bug #437396
 
   19 Sep 2012; Jeremy Olexa <darkside@gentoo.org> metadata.xml:
   dropping maintainership, backup herd exists
