--- a/mail-client/mail-notification/ChangeLog
+++ b/mail-client/mail-notification/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/mail-notification
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mail-notification/ChangeLog,v 1.113 2012/10/06 08:58:28 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mail-notification/ChangeLog,v 1.114 2012/10/06 15:12:51 blueness Exp $
+
+  06 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  mail-notification-5.4-r6.ebuild:
+  keyword ~ppc, bug #437372
 
 *mail-notification-5.4-r6 (06 Oct 2012)
 
