--- a/app-text/wdiff/ChangeLog
+++ b/app-text/wdiff/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/wdiff
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/wdiff/ChangeLog,v 1.79 2012/09/30 16:33:20 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/wdiff/ChangeLog,v 1.80 2012/10/06 15:18:41 jlec Exp $
+
+  06 Oct 2012; Justin Lecher <jlec@gentoo.org> -wdiff-1.1.0.ebuild,
+  -wdiff-1.1.1.ebuild:
+  Drop old
 
   30 Sep 2012; Raúl Porcel <armin76@gentoo.org> wdiff-1.1.2.ebuild:
   alpha/ia64/s390/sh/sparc stable wrt #428906
