--- a/app-text/dos2unix/ChangeLog
+++ b/app-text/dos2unix/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/dos2unix
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/dos2unix/ChangeLog,v 1.102 2012/09/24 18:31:08 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/dos2unix/ChangeLog,v 1.103 2012/10/06 15:19:17 jlec Exp $
+
+  06 Oct 2012; Justin Lecher <jlec@gentoo.org> -dos2unix-5.3.3.ebuild:
+  Drop old
 
   24 Sep 2012; Raúl Porcel <armin76@gentoo.org> dos2unix-6.0.ebuild:
   alpha/s390/sh/sparc stable wrt #421999
