--- a/app-misc/colordiff/ChangeLog
+++ b/app-misc/colordiff/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/colordiff
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/colordiff/ChangeLog,v 1.89 2012/08/26 17:05:48 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/colordiff/ChangeLog,v 1.90 2012/10/06 15:26:35 jlec Exp $
+
+  06 Oct 2012; Justin Lecher <jlec@gentoo.org> -colordiff-1.0.9.ebuild:
+  Drop old
 
   26 Aug 2012; Raúl Porcel <armin76@gentoo.org> colordiff-1.0.10.ebuild:
   alpha/ia64/sparc stable wrt #428878
