--- a/net-dns/host/ChangeLog
+++ b/net-dns/host/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/host
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/host/ChangeLog,v 1.22 2012/10/05 18:06:24 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/host/ChangeLog,v 1.23 2012/10/06 16:03:24 jer Exp $
+
+  06 Oct 2012; Jeroen Roovers <jer@gentoo.org> -host-991529.ebuild,
+  -host-20070128.ebuild:
+  Old.
 
   05 Oct 2012; Brent Baude <ranger@gentoo.org> host-20070128-r1.ebuild:
   Marking host-20070128-r1 ppc64 for bug 434036
