--- a/sys-apps/policycoreutils/ChangeLog
+++ b/sys-apps/policycoreutils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/policycoreutils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/policycoreutils/ChangeLog,v 1.104 2012/09/08 18:40:59 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/policycoreutils/ChangeLog,v 1.105 2012/10/06 16:39:54 swift Exp $
+
+  06 Oct 2012; <swift@gentoo.org> policycoreutils-2.1.10-r5.ebuild:
+  Stabilize
 
 *policycoreutils-2.1.10-r5 (08 Sep 2012)
 
