--- a/dev-libs/libf2c/ChangeLog
+++ b/dev-libs/libf2c/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/libf2c
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libf2c/ChangeLog,v 1.51 2012/09/07 11:27:11 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libf2c/ChangeLog,v 1.52 2012/10/06 16:53:54 armin76 Exp $
+
+  06 Oct 2012; Raúl Porcel <armin76@gentoo.org> libf2c-20090407-r1.ebuild,
+  libf2c-20110801-r2.ebuild:
+  Drop alpha keywords
 
   07 Sep 2012; Johannes Huber <johu@gentoo.org> libf2c-20110801-r2.ebuild:
   Stable for x86, wrt bug #433493
