--- a/www-apps/egroupware/ChangeLog
+++ b/www-apps/egroupware/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/egroupware
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/egroupware/ChangeLog,v 1.104 2012/09/19 16:26:45 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/egroupware/ChangeLog,v 1.105 2012/10/06 16:55:20 armin76 Exp $
+
+  06 Oct 2012; Raúl Porcel <armin76@gentoo.org> egroupware-1.4.004.ebuild,
+  egroupware-1.8.004.20120613.ebuild:
+  Drop alpha keywords
 
   19 Sep 2012; Johannes Huber <johu@gentoo.org>
   egroupware-1.8.004.20120613.ebuild:
