--- a/www-apps/curator/ChangeLog
+++ b/www-apps/curator/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/curator
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/curator/ChangeLog,v 1.14 2012/09/22 14:41:52 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/curator/ChangeLog,v 1.15 2012/10/06 16:56:09 armin76 Exp $
+
+  06 Oct 2012; Raúl Porcel <armin76@gentoo.org> curator-2.0.ebuild,
+  curator-2.1.ebuild, curator-3.0_p20110120.ebuild:
+  Drop alpha/sparc keywords
 
   22 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
   curator-3.0_p20110120.ebuild:
