--- a/net-nntp/nzbget/ChangeLog
+++ b/net-nntp/nzbget/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-nntp/nzbget
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/nzbget/ChangeLog,v 1.44 2012/09/30 18:22:55 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/nzbget/ChangeLog,v 1.45 2012/10/06 16:58:44 armin76 Exp $
+
+  06 Oct 2012; Raúl Porcel <armin76@gentoo.org> nzbget-0.8.0.ebuild:
+  x86 stable wrt #433882
 
   30 Sep 2012; Raúl Porcel <armin76@gentoo.org> nzbget-0.7.0.ebuild,
   nzbget-0.8.0.ebuild:
