--- a/app-misc/cdircmp/ChangeLog
+++ b/app-misc/cdircmp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/cdircmp
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/cdircmp/ChangeLog,v 1.16 2011/12/19 16:45:21 ago Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/cdircmp/ChangeLog,v 1.17 2012/10/06 16:59:30 armin76 Exp $
+
+  06 Oct 2012; Raúl Porcel <armin76@gentoo.org> cdircmp-0.3.ebuild,
+  cdircmp-0.3-r1.ebuild:
+  Drop alpha keywords
 
   19 Dec 2011; Agostino Sarubbo <ago@gentoo.org> cdircmp-0.3-r1.ebuild:
   Stable for AMD64, wrt bug #393719
