--- a/media-libs/jasper/ChangeLog
+++ b/media-libs/jasper/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/jasper
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/jasper/ChangeLog,v 1.73 2012/09/30 17:15:25 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/jasper/ChangeLog,v 1.74 2012/10/06 17:01:02 jlec Exp $
+
+  06 Oct 2012; Justin Lecher <jlec@gentoo.org> -jasper-1.900.1-r3.ebuild,
+  -jasper-1.900.1-r4.ebuild, metadata.xml:
+  Drop old
 
   30 Sep 2012; Raúl Porcel <armin76@gentoo.org> jasper-1.900.1-r5.ebuild:
   ia64/s390/sh/sparc stable wrt #429120
