--- a/net-libs/gnutls/ChangeLog
+++ b/net-libs/gnutls/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/gnutls
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.384 2012/10/03 10:28:58 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.385 2012/10/06 17:14:01 armin76 Exp $
+
+  06 Oct 2012; Raúl Porcel <armin76@gentoo.org> gnutls-2.12.20.ebuild:
+  alpha/ia64/m68k/s390/sh/sparc/x86 stable wrt #436368
 
   03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gnutls-2.12.20.ebuild:
   Stable for amd64, wrt bug #436368
