--- a/x11-wm/openbox/ChangeLog
+++ b/x11-wm/openbox/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for x11-wm/openbox
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/openbox/ChangeLog,v 1.253 2012/08/29 10:52:59 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/openbox/ChangeLog,v 1.254 2012/10/06 17:38:11 hwoarang Exp $
+
+*openbox-3.5.0_p20121006 (06 Oct 2012)
+
+  06 Oct 2012; Markos Chandras <hwoarang@gentoo.org>
+  +files/openbox-3.5.0_p20121006-javaswing.patch,
+  +openbox-3.5.0_p20121006.ebuild, files/openbox-3.5.0-fix-desktop-files.patch:
+  New snapshot with latest upstream fix plus a patch for bug #413997
 
   29 Aug 2012; Julian Ospald <hasufell@gentoo.org> openbox-3.5.0-r1.ebuild,
   openbox-3.5.0_p20111019.ebuild, openbox-3.5.0_p20111019-r2.ebuild,
