--- a/sys-devel/gcc/ChangeLog
+++ b/sys-devel/gcc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/gcc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.908 2012/10/03 19:58:29 zorry Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.909 2012/10/06 18:02:44 zorry Exp $
+
+  06 Oct 2012; Magnus Granberg <zorry@gentoo.org> gcc-4.7.2.ebuild:
+  Bump the piepatchset to 0.5.5
 
   03 Oct 2012; Magnus Granberg <zorry@gentoo.org> gcc-4.7.2.ebuild:
   Update piepatchset to 0.5.4 to fix 436924
