Respect LDFLAGS wrt bug #335951
Package-Manager: portage-2.2.0_alpha134/cvs/Linux x86_64

--- a/net-analyzer/nsat/ChangeLog
+++ b/net-analyzer/nsat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/nsat
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nsat/ChangeLog,v 1.20 2012/09/26 07:20:51 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nsat/ChangeLog,v 1.21 2012/10/06 19:00:44 pinkbyte Exp $
+
+  06 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> nsat-1.5-r1.ebuild:
+  Respect LDFLAGS wrt bug #335951
 
   26 Sep 2012; Sergey Popov <pinkbyte@gentoo.org> nsat-1.5-r1.ebuild:
   Bump ebuild's EAPI to 2, add some QA fixes wrt bug #335951
