--- a/dev-db/sqlite/ChangeLog
+++ b/dev-db/sqlite/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/sqlite
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.428 2012/10/04 23:22:10 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.429 2012/10/06 19:52:53 floppym Exp $
+
+*sqlite-3.7.14.1 (06 Oct 2012)
+
+  06 Oct 2012; Mike Gilbert <floppym@gentoo.org> +sqlite-3.7.14.1.ebuild:
+  Version bump. Ebuild by Arfrever.
 
   04 Oct 2012; Ulrich Müller <ulm@gentoo.org> sqlite-2.8.16-r5.ebuild,
   sqlite-3.7.12.1.ebuild, sqlite-3.7.13.ebuild, sqlite-3.7.14.ebuild:
