--- a/x11-base/xorg-drivers/ChangeLog
+++ b/x11-base/xorg-drivers/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-base/xorg-drivers
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-drivers/ChangeLog,v 1.80 2012/09/06 13:35:42 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-drivers/ChangeLog,v 1.81 2012/10/06 20:46:33 ulm Exp $
+
+  06 Oct 2012; Ulrich Müller <ulm@gentoo.org> xorg-drivers-1.9.ebuild,
+  xorg-drivers-1.10.ebuild, xorg-drivers-1.11.ebuild, xorg-drivers-1.12.ebuild,
+  xorg-drivers-1.13.ebuild:
+  Update LICENSE to "metapackage" non-license, bug 436608.
 
 *xorg-drivers-1.13 (06 Sep 2012)
 
