--- a/x11-libs/libxcb/ChangeLog
+++ b/x11-libs/libxcb/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/libxcb
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/ChangeLog,v 1.96 2012/08/26 19:01:43 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxcb/ChangeLog,v 1.97 2012/10/06 20:53:44 chithanh Exp $
+
+*libxcb-1.8.1-r1 (06 Oct 2012)
+
+  06 Oct 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +files/libxcb-1.8.1-multithread-deadlock.patch, +libxcb-1.8.1-r1.ebuild:
+  Add patch to fix wine deadlock, bug #436780.
 
   26 Aug 2012; Raúl Porcel <armin76@gentoo.org> libxcb-1.8.1.ebuild:
   alpha/ia64/s390/sh/sparc stable wrt #419473
@@ -338,4 +344,3 @@
   09 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; +metadata.xml,
   +libxcb-0.9.92.ebuild:
   Add X C-language Bindings library.
-
