--- a/app-text/highlight/ChangeLog
+++ b/app-text/highlight/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/highlight
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/highlight/ChangeLog,v 1.55 2012/10/06 02:46:48 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/highlight/ChangeLog,v 1.56 2012/10/06 21:01:01 floppym Exp $
+
+  06 Oct 2012; Mike Gilbert <floppym@gentoo.org> highlight-3.12.ebuild:
+  Depend on pkgconfig, bug 437428 by Nikoli.
 
   06 Oct 2012; Tim Harder <radhermit@gentoo.org> -highlight-3.7.ebuild,
   -highlight-3.8.ebuild:
@@ -220,4 +223,3 @@
 
   26 Mar 2005; <pclouds@gentoo.org> +metadata.xml, +highlight-2.2.9.ebuild:
   Initial ebuild, contributed by Jan Nárovec <finn@sendmail.cz> #86448
-
