--- a/dev-libs/glib/ChangeLog
+++ b/dev-libs/glib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/glib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.541 2012/10/06 08:56:46 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.542 2012/10/06 21:17:44 blueness Exp $
+
+  06 Oct 2012; Anthony G. Basile <blueness@gentoo.org> glib-2.32.4-r1.ebuild:
+  stable ppc ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> glib-2.32.4-r1.ebuild:
   arm stable, bug #427544
