--- a/dev-libs/gobject-introspection/ChangeLog
+++ b/dev-libs/gobject-introspection/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/gobject-introspection
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gobject-introspection/ChangeLog,v 1.79 2012/10/06 09:05:14 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gobject-introspection/ChangeLog,v 1.80 2012/10/06 21:29:32 blueness Exp $
+
+  06 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  gobject-introspection-1.32.1.ebuild:
+  stable ppc ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org>
   gobject-introspection-1.32.1.ebuild:
