--- a/net-dns/avahi/ChangeLog
+++ b/net-dns/avahi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/avahi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.232 2012/10/05 14:21:15 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.233 2012/10/06 21:37:10 blueness Exp $
+
+  06 Oct 2012; Anthony G. Basile <blueness@gentoo.org> avahi-0.6.30-r3.ebuild:
+  stable ppc64, bug #431830
 
   05 Oct 2012; Brent Baude <ranger@gentoo.org> avahi-0.6.30-r3.ebuild:
   Marking avahi-0.6.30-r3 ppc for bug 431830
