--- a/dev-python/ttystatus/ChangeLog
+++ b/dev-python/ttystatus/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/ttystatus
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/ttystatus/ChangeLog,v 1.3 2012/07/08 23:43:13 mschiff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/ttystatus/ChangeLog,v 1.4 2012/10/06 23:17:21 mschiff Exp $
+
+*ttystatus-0.21 (06 Oct 2012)
+
+  06 Oct 2012; Marc Schiffbauer <mschiff@gentoo.org> +ttystatus-0.21.ebuild:
+  Version bump. Drop old version.
 
 *ttystatus-0.19 (08 Jul 2012)
 
@@ -15,4 +20,3 @@
   15 Jun 2012; Marc Schiffbauer <mschiff@gentoo.org> +ttystatus-0.18.ebuild,
   +metadata.xml:
   Initial commit of ttystatus.
-
