--- a/dev-python/ttystatus/ChangeLog
+++ b/dev-python/ttystatus/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/ttystatus
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/ttystatus/ChangeLog,v 1.4 2012/10/06 23:17:21 mschiff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/ttystatus/ChangeLog,v 1.5 2012/10/06 23:18:43 mschiff Exp $
+
+  06 Oct 2012; Marc Schiffbauer <mschiff@gentoo.org> ChangeLog:
+  Version bump. Drop old version.
 
 *ttystatus-0.21 (06 Oct 2012)
 
