--- a/dev-python/ttystatus/ChangeLog
+++ b/dev-python/ttystatus/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/ttystatus
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/ttystatus/ChangeLog,v 1.5 2012/10/06 23:18:43 mschiff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/ttystatus/ChangeLog,v 1.6 2012/10/06 23:19:40 mschiff Exp $
+
+  06 Oct 2012; Marc Schiffbauer <mschiff@gentoo.org> -ttystatus-0.18.ebuild:
+  Drop old version.
 
   06 Oct 2012; Marc Schiffbauer <mschiff@gentoo.org> ChangeLog:
   Version bump. Drop old version.
