--- a/dev-python/tracing/ChangeLog
+++ b/dev-python/tracing/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/tracing
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/tracing/ChangeLog,v 1.1 2012/06/15 10:17:56 mschiff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/tracing/ChangeLog,v 1.2 2012/10/06 23:21:46 mschiff Exp $
+
+*tracing-0.7 (06 Oct 2012)
+
+  06 Oct 2012; Marc Schiffbauer <mschiff@gentoo.org> +tracing-0.7.ebuild:
+  Version bump.
 
 *tracing-0.6 (15 Jun 2012)
 
