--- a/net-misc/freerdp/ChangeLog
+++ b/net-misc/freerdp/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/freerdp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/freerdp/ChangeLog,v 1.34 2012/09/23 20:14:47 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/freerdp/ChangeLog,v 1.35 2012/10/07 00:31:10 floppym Exp $
+
+*freerdp-1.1.0_pre20121004 (07 Oct 2012)
+
+  07 Oct 2012; Mike Gilbert <floppym@gentoo.org>
+  +freerdp-1.1.0_pre20121004.ebuild:
+  Add a new snapshot.
 
   23 Sep 2012; Mike Gilbert <floppym@gentoo.org> freerdp-9999.1.ebuild,
   metadata.xml:
