--- a/net-misc/remmina/ChangeLog
+++ b/net-misc/remmina/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/remmina
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/remmina/ChangeLog,v 1.38 2012/08/27 16:23:55 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/remmina/ChangeLog,v 1.39 2012/10/07 00:32:31 floppym Exp $
+
+*remmina-1.0.0_p20121004 (07 Oct 2012)
+
+  07 Oct 2012; Mike Gilbert <floppym@gentoo.org>
+  +remmina-1.0.0_p20121004.ebuild, metadata.xml, remmina-9999.ebuild:
+  Add a new snaphot. Resolves bug 428826.
 
   27 Aug 2012; Mike Gilbert <floppym@gentoo.org> remmina-9999.ebuild:
   Add https fallback for git.
