--- a/dev-python/larch/ChangeLog
+++ b/dev-python/larch/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/larch
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/larch/ChangeLog,v 1.2 2012/10/06 23:24:13 mschiff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/larch/ChangeLog,v 1.3 2012/10/07 00:40:09 mschiff Exp $
+
+*larch-1.20121006-r1 (07 Oct 2012)
+
+  07 Oct 2012; Marc Schiffbauer <mschiff@gentoo.org> -larch-1.20121006.ebuild,
+  +larch-1.20121006-r1.ebuild:
+  Enabled test after adding dev-util/cmdtest to the tree.
 
 *larch-1.20121006 (06 Oct 2012)
 
