--- a/dev-libs/link-grammar/ChangeLog
+++ b/dev-libs/link-grammar/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/link-grammar
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/ChangeLog,v 1.47 2012/10/04 14:49:43 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/ChangeLog,v 1.48 2012/10/07 00:43:43 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  link-grammar-4.7.6.ebuild:
+  stable ppc64, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> link-grammar-4.7.6.ebuild:
   Stable for amd64, wrt bug #427544
@@ -189,4 +193,3 @@
   of English, based on link grammar, an original theory of English syntax. The
   system is written in generic C code, and runs on any platform with a C
   compiler.
-
