--- a/dev-python/rdflib/ChangeLog
+++ b/dev-python/rdflib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/rdflib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/rdflib/ChangeLog,v 1.14 2012/09/29 23:48:50 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/rdflib/ChangeLog,v 1.15 2012/10/07 00:46:43 floppym Exp $
+
+  07 Oct 2012; Mike Gilbert <floppym@gentoo.org> rdflib-3.1.0.ebuild,
+  rdflib-3.2.1.ebuild, rdflib-3.2.2.ebuild:
+  Update HOMEPAGE as suggested by Arfrever.
 
 *rdflib-3.2.2 (29 Sep 2012)
 
@@ -61,4 +65,3 @@
   Initial commit. Closes #161492. Thank you Mikael Lammentausta
   <mikael.lammentausta@savonia-amk.fi>, Sam Jacobson <sam@eversoft.co.nz>,
   Sunrise.
-
