stable ppc64, bug #427544
Package-Manager: portage-2.1.11.9/cvs/Linux x86_64

--- a/dev-libs/librep/ChangeLog
+++ b/dev-libs/librep/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/librep
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/librep/ChangeLog,v 1.74 2012/10/04 14:49:18 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/librep/ChangeLog,v 1.75 2012/10/07 00:54:20 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> librep-0.92.2.1.ebuild:
+  stable ppc64, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> librep-0.92.2.1.ebuild:
   Stable for amd64, wrt bug #427544
