--- a/dev-util/meld/ChangeLog
+++ b/dev-util/meld/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/meld
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/meld/ChangeLog,v 1.148 2012/10/06 09:18:06 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/meld/ChangeLog,v 1.149 2012/10/07 00:57:26 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> meld-1.6.0.ebuild:
+  stable ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> meld-1.6.0.ebuild:
   arm stable, bug #427544
@@ -563,4 +566,3 @@
   08 Jun 2003; Alastair Tse <liquidx@gentoo.org> meld-0.8.1.ebuild,
   files/meld-0.8.1-gentoo.diff:
   new package. thanks to suka <suka@t0.or.at> (#21578)
-
