--- a/gnome-base/dconf/ChangeLog
+++ b/gnome-base/dconf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/dconf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/dconf/ChangeLog,v 1.37 2012/10/06 09:19:11 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/dconf/ChangeLog,v 1.38 2012/10/07 00:58:45 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> dconf-0.12.1.ebuild:
+  stable ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> dconf-0.12.1.ebuild:
   arm stable, bug #427544
@@ -148,4 +151,3 @@
   +metadata.xml:
   Adding dconf as it's required by apps relying on gsettings to store their
   preferences.
-
