--- a/gnome-extra/libgda/ChangeLog
+++ b/gnome-extra/libgda/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/libgda
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgda/ChangeLog,v 1.208 2012/10/04 14:54:49 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgda/ChangeLog,v 1.209 2012/10/07 01:03:15 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> libgda-4.2.13.ebuild:
+  stable ppc64, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> libgda-4.2.13.ebuild:
   Stable for amd64, wrt bug #427544
