--- a/net-libs/libnice/ChangeLog
+++ b/net-libs/libnice/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libnice
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libnice/ChangeLog,v 1.38 2012/10/06 09:39:03 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libnice/ChangeLog,v 1.39 2012/10/07 00:59:41 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> libnice-0.1.2.ebuild:
+  stable ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> libnice-0.1.2.ebuild:
   arm stable, bug #427544
