--- a/gnome-extra/gucharmap/ChangeLog
+++ b/gnome-extra/gucharmap/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/gucharmap
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gucharmap/ChangeLog,v 1.180 2012/10/06 09:25:59 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gucharmap/ChangeLog,v 1.181 2012/10/07 01:12:26 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gucharmap-3.4.1.1.ebuild:
+  stable ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> gucharmap-3.4.1.1.ebuild:
   arm stable, bug #427544
