--- a/gnome-base/gsettings-desktop-schemas/ChangeLog
+++ b/gnome-base/gsettings-desktop-schemas/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gsettings-desktop-schemas
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gsettings-desktop-schemas/ChangeLog,v 1.37 2012/10/06 09:20:13 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gsettings-desktop-schemas/ChangeLog,v 1.38 2012/10/07 01:11:12 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  gsettings-desktop-schemas-3.4.2.ebuild:
+  stable ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org>
   gsettings-desktop-schemas-3.4.2.ebuild:
