--- a/app-office/dia/ChangeLog
+++ b/app-office/dia/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/dia
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/dia/ChangeLog,v 1.150 2012/10/04 14:45:26 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/dia/ChangeLog,v 1.151 2012/10/07 01:15:28 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> dia-0.97.2-r1.ebuild:
+  stable ppc64, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> dia-0.97.2-r1.ebuild:
   Stable for amd64, wrt bug #427544
