--- a/media-libs/libgphoto2/ChangeLog
+++ b/media-libs/libgphoto2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libgphoto2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.217 2012/10/04 14:57:07 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.218 2012/10/07 01:33:17 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> libgphoto2-2.4.14.ebuild:
+  stable ppc64, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> libgphoto2-2.4.14.ebuild:
   Stable for amd64, wrt bug #427544
