stable ppc64, bug #427544
Package-Manager: portage-2.1.11.9/cvs/Linux x86_64

--- a/dev-libs/gdl/ChangeLog
+++ b/dev-libs/gdl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/gdl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gdl/ChangeLog,v 1.77 2012/10/04 14:47:51 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gdl/ChangeLog,v 1.78 2012/10/07 01:35:33 blueness Exp $
+
+  07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gdl-3.4.2.ebuild:
+  stable ppc64, bug #427544
 
   04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gdl-3.4.2.ebuild:
   Stable for amd64, wrt bug #427544
@@ -293,4 +296,3 @@
   29 Jun 2006; Martin Schlemmer <azarah@gentoo.org> +metadata.xml,
   +gdl-0.6.1.ebuild:
   Import.  Only saw bug #8561 after I added, so imported some changes.
-
