--- a/net-misc/mobile-broadband-provider-info/ChangeLog
+++ b/net-misc/mobile-broadband-provider-info/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/mobile-broadband-provider-info
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/mobile-broadband-provider-info/ChangeLog,v 1.16 2012/10/04 21:38:34 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/mobile-broadband-provider-info/ChangeLog,v 1.17 2012/10/07 07:55:28 pacho Exp $
+
+  07 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
+  Drop maintainer as talked with him.
 
   04 Oct 2012; Brent Baude <ranger@gentoo.org>
   mobile-broadband-provider-info-20120614.ebuild:
@@ -79,4 +82,3 @@
   02 Jul 2009; Robert Piasek <dagger@gentoo.org>
   mobile-broadband-provider-info-20090602.ebuild, +metadata.xml:
   New ebuild for mobole mroadband providers info
-
