--- a/net-misc/modemmanager/ChangeLog
+++ b/net-misc/modemmanager/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/modemmanager
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/modemmanager/ChangeLog,v 1.36 2012/09/13 09:53:38 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/modemmanager/ChangeLog,v 1.37 2012/10/07 07:56:08 pacho Exp $
+
+  07 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
+  Drop maintainer as talked with him.
 
 *modemmanager-0.6.0.0 (13 Sep 2012)
 
@@ -189,4 +192,3 @@
   13 Aug 2009; Robert Piasek <dagger@gentoo.org>
   +modemmanager-0.2_p20090806.ebuild, +metadata.xml:
   Initial ebuild of modemmanager
-
